Fix <hr> looks too bold on Firefox by removing default <hr> styles

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -41,6 +41,13 @@ a {
   }
 }
 
+hr {
+  border: none;
+  background: lightgray;
+  height: 2px;
+  opacity: 75%;
+}
+
 th,
 td {
   text-align: center;
